feat(workshop): implement canvas example

--- a/static/global.css
+++ b/static/global.css
@@ -17,13 +17,13 @@ html {
 @media (min-width: 30rem) and (max-width: 100rem) {
 	:root,
 	html {
-		font-size: calc(1rem + .33 * ((100vw - 30rem) / 70));
+		font-size: calc(1rem + .4 * ((100vw - 30rem) / 70));
 	}
 }
 @media (min-width: 100rem) {
 	:root,
 	html {
-		font-size: 1.33rem;
+		font-size: 1.4rem;
 	}
 }
 
@@ -64,6 +64,10 @@ hr {
 	height: 1px;
 	/* background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0)); */
 	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+H1, h2, h3, h4, h5, h6 {
+	margin-bottom: 1.5rem;
 }
 
 /* Generic utilities */
