--- a/static/global-cache-bust-1.css
+++ b/static/global-cache-bust-1.css
@@ -87,12 +87,15 @@ H1, h2, h3, h4, h5, h6 {
 
 .f-grid {
 	--gutter: .5em;
-	--item-width: 5em;
+	--item-width: 17em;
 	display: flex;
 	flex-wrap: wrap;
-	align-items: center;
+	/* align-items: center; */
   justify-content: center;
 	margin: calc(var(--gutter) * -1);
+}
+.f-grid--p {
+	padding: calc(var(--gutter) * 2);
 }
 .f-grid > * {
 	flex: 1 0 var(--item-width);
