--- a/static/global-cache-bust-1.css
+++ b/static/global-cache-bust-1.css
@@ -1,37 +1,55 @@
-/* Ugly reset */
+/**
+ * @file
+ * Global CSS (unscoped styles).
+ */
+
+/* Brutal reset */
+
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
 
+
 /* Shared values */
+
 :root,
 html {
 	--color-invert-bg: rgba(0, 0, 0, .66);
 	--color-invert-link-off: white;
 	--color-invert-link-on: deepskyblue;
+
 	--content-width: 60ch;
 	--content-bleed: calc((100vw - var(--content-width)) / 2);
+
+	--space-l: 1rem;
+	--space: .75rem;
+	--space-s: .5rem;
+	--space-xs: .25rem;
 }
 
+
 /* Responsive font-size */
+
 @media (min-width: 30rem) and (max-width: 100rem) {
 	:root,
 	html {
-		font-size: calc(1rem + .4 * ((100vw - 30rem) / 70));
+		font-size: calc(.95rem + .4 * ((100vw - 30rem) / 70));
 	}
 }
 @media (min-width: 100rem) {
 	:root,
 	html {
-		font-size: 1.4rem;
+		font-size: 1.3rem;
 	}
 }
 
+
 /* Main page "frame" */
+
 body {
-	font-family: 'Gudea', sans-serif;
+	font-family: 'Gudea', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* @see https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/ */
 	overflow-x: hidden;
 }
 
@@ -57,7 +75,9 @@ body {
 	}
 }
 
+
 /* Default tags */
+
 img {
 	display: inline-block;
 	max-width: 100%;
@@ -79,20 +99,69 @@ hr {
 	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
-H1, h2, h3, h4, h5, h6 {
-	margin-bottom: 1.5rem;
+h1,
+h2,
+h3 {
+	margin: var(--space-l) 0 var(--space-xs) 0;
 }
+
+table {
+	border-collapse: collapse;
+}
+
+blockquote {
+	margin-bottom: var(--space);
+	font-size: 120%;
+}
+
+
+/* Rich text styles */
+
+/* .rich-text h1,
+.rich-text h2,
+.rich-text h3 {
+	margin: var(--space-l) 0 0 0;
+} */
+
+.rich-text p,
+.rich-text ul,
+.rich-text ol,
+.rich-text table {
+	margin-bottom: var(--space);
+}
+.rich-text li {
+	margin-left: var(--space-l);
+}
+/* .rich-text th + th,
+.rich-text td + td {
+	padding-left: var(--space-s);
+} */
+.rich-text th,
+.rich-text td {
+	padding: calc(var(--space-s) / 2);
+}
+.rich-text td {
+	border-top: 1px solid grey;
+}
+
+.rich-text blockquote p {
+	margin-bottom: 0;
+}
+
 
 /* Generic utilities */
 
 .f-grid {
 	--gutter: .5em;
-	--item-width: 17em;
+	--item-width: 33ch;
 	display: flex;
 	flex-wrap: wrap;
 	/* align-items: center; */
   justify-content: center;
 	margin: calc(var(--gutter) * -1);
+}
+.f-grid--center {
+	align-items: center;
 }
 .f-grid--p {
 	padding: calc(var(--gutter) * 2);
@@ -102,13 +171,7 @@ H1, h2, h3, h4, h5, h6 {
 	margin: var(--gutter);
 }
 
-/**
- * Hide elements visually, but keep them available for screen-readers.
- *
- * Used for information required for screen-reader users to understand and use
- * the site where visual display is undesirable. Information provided in this
- * manner should be kept concise, to avoid unnecessary burden on the user.
- */
+/* Hide elements visually, but keep them available for screen-readers. */
 .u-sr-only {
 	position: absolute;
 	overflow: hidden;
@@ -118,4 +181,11 @@ H1, h2, h3, h4, h5, h6 {
 	padding: 0;
 	width: 1px;
 	height: 1px;
+}
+
+.u-faux-small-caps {
+	font-size: .7rem;
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: .16ch;
 }
