--- a/static/global-cache-bust-3.css
+++ b/static/global-cache-bust-3.css
@@ -107,6 +107,14 @@ h3 {
 
 table {
 	border-collapse: collapse;
+	margin-bottom: var(--space);
+}
+th,
+td {
+	padding: calc(var(--space-s) / 2);
+}
+td {
+	border-top: 1px solid grey;
 }
 
 blockquote {
@@ -125,23 +133,11 @@ blockquote {
 
 .rich-text p,
 .rich-text ul,
-.rich-text ol,
-.rich-text table {
+.rich-text ol {
 	margin-bottom: var(--space);
 }
 .rich-text li {
 	margin-left: var(--space-l);
-}
-/* .rich-text th + th,
-.rich-text td + td {
-	padding-left: var(--space-s);
-} */
-.rich-text th,
-.rich-text td {
-	padding: calc(var(--space-s) / 2);
-}
-.rich-text td {
-	border-top: 1px solid grey;
 }
 
 .rich-text blockquote p {
