--- a/static/global-cache-bust-4.css
+++ b/static/global-cache-bust-4.css
@@ -116,6 +116,11 @@ td {
 td {
 	border-top: 1px solid grey;
 }
+th {
+	position: sticky;
+	top: 0;
+	background-color: white;
+}
 
 blockquote {
 	margin-bottom: var(--space);
