--- a/static/global-cache-bust-6.css
+++ b/static/global-cache-bust-6.css
@@ -51,7 +51,7 @@ html {
 
 body {
 	font-family: 'Gudea', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* @see https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/ */
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 }
 
 #sapper {
@@ -120,7 +120,7 @@ h3 {
 
 table {
 	border-collapse: collapse;
-	margin-bottom: var(--space);
+	margin: 0 var(--space) var(--space) var(--space);
 }
 th,
 td {
@@ -134,6 +134,31 @@ th {
 	top: 0;
 	background-color: white;
 	font-weight: normal;
+}
+.sort {
+	display: flex;
+	cursor: pointer;
+}
+.sort > span {
+	padding-right: var(--space-s);
+}
+table .sort.is-off .is-asc,
+table .sort.is-off .is-desc {
+	display: none;
+}
+table .sort.is-asc .is-desc {
+	display: none;
+}
+table .sort.is-desc .is-asc {
+	display: none;
+}
+th.is-active {
+	background-color: cornflowerblue;
+	color: white;
+	font-weight: bold;
+}
+th.is-active button {
+	color: inherit;
 }
 
 blockquote {
