--- a/static/global-cache-bust-6.css
+++ b/static/global-cache-bust-6.css
@@ -17,7 +17,8 @@
 
 :root,
 html {
-	--color-invert-bg: rgba(0, 0, 0, .66);
+	/* --color-invert-bg: rgba(0, 0, 0, .66); */
+	--color-invert-bg: #444;
 	--color-invert-link-off: white;
 	--color-invert-link-on: deepskyblue;
 
@@ -93,18 +94,6 @@ a:visited {
 a:focus,
 a:hover,
 a.is-active {
-	color: cornflowerblue;
-}
-
-button {
-	font-size: inherit;
-	font-weight: inherit;
-	background: none;
-	cursor: pointer;
-}
-button:focus,
-button:hover,
-button.is-active {
 	color: cornflowerblue;
 }
 
@@ -231,4 +220,110 @@ blockquote {
 	font-weight: bold;
 	text-transform: uppercase;
 	letter-spacing: .16ch;
+}
+
+
+/* By default, all <button> without class appear like links. */
+
+button {
+	font-size: inherit;
+	font-weight: inherit;
+	background: none;
+	cursor: pointer;
+}
+button:focus,
+button:hover,
+button.is-active {
+	color: cornflowerblue;
+}
+
+/* button, */
+.btn,
+input[type='button'],
+input[type='reset'],
+input[type='submit'] {
+  background-color: var(--color-invert-bg);
+  border: .1rem solid var(--color-invert-bg);
+  border-radius: .4rem;
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+  font-size: .7rem;
+  font-weight: bold;
+  /* height: 2rem; */
+  /* letter-spacing: .1rem; */
+	letter-spacing: .16ch;
+  /* line-height: 2rem; */
+  padding: var(--space) var(--space-l);
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+/* button:focus, */
+/* button:hover, */
+.btn:focus,
+.btn:hover,
+.btn.is-active,
+input[type='button']:focus,
+input[type='button']:hover,
+input[type='button'].is-active,
+input[type='reset']:hover,
+input[type='reset']:focus,
+input[type='reset'].is-active,
+input[type='submit']:focus,
+input[type='submit']:hover,
+input[type='submit'].is-active {
+	background-color: cornflowerblue;
+	border-color: cornflowerblue;
+	color: white;
+	outline: 0;
+}
+
+input[type='color'],
+input[type='date'],
+input[type='datetime'],
+input[type='datetime-local'],
+input[type='email'],
+input[type='month'],
+input[type='number'],
+input[type='password'],
+input[type='search'],
+input[type='tel'],
+input[type='text'],
+input[type='url'],
+input[type='week'],
+input:not([type]),
+textarea,
+select {
+	-webkit-appearance: none;
+  background-color: transparent;
+  border: .1rem solid cornflowerblue;
+  border-radius: .4rem;
+  box-shadow: none;
+  /* height: 3.8rem; */
+  /* padding: .6rem 1.0rem .7rem; */
+  padding: var(--space) var(--space-l);
+  width: 100%;
+}
+
+input[type='color']:focus,
+input[type='date']:focus,
+input[type='datetime']:focus,
+input[type='datetime-local']:focus,
+input[type='email']:focus,
+input[type='month']:focus,
+input[type='number']:focus,
+input[type='password']:focus,
+input[type='search']:focus,
+input[type='tel']:focus,
+input[type='text']:focus,
+input[type='url']:focus,
+input[type='week']:focus,
+input:not([type]):focus,
+textarea:focus,
+select:focus {
+	border-color: var(--color-invert-link-on);
+	outline: 0;
 }
