--- a/static/global-cache-bust-6.css
+++ b/static/global-cache-bust-6.css
@@ -125,6 +125,7 @@ table {
 th,
 td {
 	padding: calc(var(--space-s) / 2);
+	text-align: left;
 }
 td {
 	border-top: 1px solid grey;
@@ -132,6 +133,7 @@ td {
 th {
 	position: sticky;
 	top: 0;
+	color: #888;
 	background-color: white;
 	font-weight: normal;
 }
