feat(ecometrics): adjust side panel component

--- a/static/global-cache-bust-7.css
+++ b/static/global-cache-bust-7.css
@@ -25,6 +25,7 @@ html {
 	--content-width: 60ch;
 	--content-bleed: calc((100vw - var(--content-width)) / 2);
 
+	--space-xl: 2rem;
 	--space-l: 1rem;
 	--space: .75rem;
 	--space-s: .5rem;
