feat(routing): attempt to avoid the afterUpdate() hack in all pages using our custom page data model

--- a/static/global-cache-bust-9.css
+++ b/static/global-cache-bust-9.css
@@ -88,6 +88,11 @@ body {
 	@see src/components/LayoutContentPage.svelte
 */
 
+main {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+}
 main > .fill-h {
 	flex-grow: 1;
 }
