--- a/static/global-cache-bust-16.css
+++ b/static/global-cache-bust-16.css
@@ -194,8 +194,10 @@ th.is-active button {
 }
 
 blockquote {
+	border-left: .2em solid #CFCFCF;
 	margin-bottom: var(--space);
-	font-size: 1.2rem;
+	padding-left: 1em;
+	font-style: italic;
 }
 
 dl {
