feat: wordsmithing + workaround layout glitch due to main page scrollbar

--- a/static/global-cache-bust-19.css
+++ b/static/global-cache-bust-19.css
@@ -200,6 +200,10 @@ blockquote {
 	font-style: italic;
 }
 
+q {
+	font-style: italic;
+}
+
 dl {
 	display: grid;
 	grid-template-columns: max-content auto;
