--- a/static/global.css
+++ b/static/global.css
@@ -1,107 +1,10 @@
 /**
  * @file
  * Global CSS (unscoped styles).
+ *
+ * Complements the "critical" styles loaded inline in every page.
+ * @see src/critical.css
  */
-
-/* Brutal reset */
-
-* {
-	box-sizing: border-box;
-	border: 0 none;
-	margin: 0;
-	padding: 0;
-}
-
-
-/* Shared values */
-
-:root,
-html {
-	/* --color-invert-bg: rgba(0, 0, 0, .66); */
-	--color-invert-bg: #444;
-	--color-invert-link-off: white;
-	--color-invert-link-on: deepskyblue;
-
-	--content-width: 60ch;
-
-	/*
-		See src/routes/__layout.svelte : the width of the scrollbar is calculated
-		using JS on window:load and put in the --content-width CSS var on <html>.
-	*/
-	--content-bleed: calc((100vw - var(--scrollbar-width, 10px) - var(--content-width)) / 2);
-
-	--space-xl: 2rem;
-	--space-l: 1rem;
-	--space: .75rem;
-	--space-s: .5rem;
-	--space-xs: .25rem;
-
-	--b-radius: .33rem;
-	--b-radius-s: .2rem;
-}
-
-
-/* Responsive font-size */
-
-@media (min-width: 30rem) and (max-width: 100rem) {
-	:root,
-	html {
-		font-size: calc(1rem + .5 * ((100vmin - 30rem) / 70));
-	}
-}
-@media (min-width: 100rem) {
-	:root,
-	html {
-		font-size: 1.2rem;
-	}
-}
-
-
-/* Main page "frame" */
-
-body {
-	font-family: 'Gudea', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* @see https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/ */
-	/* overflow-x: hidden; */
-}
-
-#svelte {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	margin-left: auto;
-	margin-right: auto;
-	width: var(--content-width);
-	max-width: 100%;
-	min-height: 100vh;
-}
-
-@media (min-width: 60ch) {
-	.full-vw {
-		margin-left: calc(var(--content-bleed) * -1);
-		margin-right: calc(var(--content-bleed) * -1);
-	}
-	.full-vw--padded {
-		padding-right: var(--content-bleed);
-		padding-left: var(--content-bleed);
-	}
-}
-
-
-/*
-	The <slot> in main layout wrapper may contain a direct child that needs to
-	expand the full height of the "content zone".
-	@see src/components/ContentPage.svelte
-*/
-
-main {
-	display: flex;
-	flex-direction: column;
-	flex-grow: 1;
-}
-main > .fill-h {
-	flex-grow: 1;
-}
-
 
 /* Default tags */
 
@@ -249,60 +152,6 @@ dd {
 }
 
 
-/* Generic utilities */
-
-.f-grid {
-	--gutter: var(--space-l);
-	--item-width: 50%;
-	display: flex;
-	flex-wrap: wrap;
-  justify-content: center;
-	margin: 0;
-	padding: 0;
-}
-.f-grid > * {
-	flex: 1 0 var(--item-width);
-}
-.f-grid--g,
-.f-grid--g > * {
-	padding: calc(var(--gutter) / 2);
-}
-.f-grid--center {
-	align-items: center;
-}
-
-/* .dl-grid {
-	display: grid;
-	grid-template-columns: max-content auto;
-}
-.dl-grid-max {
-	grid-column-start: 1;
-	padding-right: var(--space-l);
-}
-.dl-grid-auto {
-	grid-column-start: 2;
-} */
-
-/* Hide elements visually, but keep them available for screen-readers. */
-.u-sr-only {
-	position: absolute;
-	overflow: hidden;
-	clip: rect(0, 0, 0, 0);
-	border: 0;
-	margin: -1px;
-	padding: 0;
-	width: 1px;
-	height: 1px;
-}
-
-.u-faux-small-caps {
-	font-size: .7rem;
-	font-weight: bold;
-	text-transform: uppercase;
-	letter-spacing: .16ch;
-}
-
-
 /* By default, all <button> without class appear like links. */
 
 button {
@@ -384,7 +233,8 @@ input[type='submit'].is-active {
 	background-color: cornflowerblue;
 	color: white;
 }
-.btn.btn--rounded {
+.btn.btn--rounded,
+.btn.btn--s.btn--rounded {
 	position: relative;
 	border: 0 none;
 	background-color: transparent;
@@ -506,18 +356,14 @@ summary:hover {
 }
 
 
-/* Global third-party components overrides */
-
-/*
-	TODO later :
-	See https://github.com/rob-balfre/svelte-select/blob/master/docs/theming_variables.md
-*/
-/* .selectContainer {
-	--padding: var(--space) var(--space-l) !important;
-} */
-
-
 /* Misc utilities. */
+
+.u-faux-small-caps {
+	font-size: .7rem;
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: .16ch;
+}
 
 .u-center {
 	text-align: center;
@@ -531,3 +377,14 @@ summary:hover {
 .u-m-t {
 	margin-top: var(--space);
 }
+
+
+/* Global third-party components overrides */
+
+/*
+	TODO later :
+	See https://github.com/rob-balfre/svelte-select/blob/master/docs/theming_variables.md
+*/
+/* .selectContainer {
+	--padding: var(--space) var(--space-l) !important;
+} */
