--- a/src/critical.css
+++ b/src/critical.css
@@ -65,7 +65,7 @@ body {
 	font-family: 'Gudea', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* @see https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/ */
 }
 
-#svelte {
+body > div {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
